--- a/public/styles.css
+++ b/public/styles.css
@@ -279,7 +279,7 @@ footer {
   visibility: hidden;
 }
 .after {
-  animation: successani 0.5s ease-in-out;
+  animation: successani 0.5s ease-in-out 1s forwards;
   transform-origin: center;
 }
 @keyframes successani {
@@ -297,7 +297,7 @@ footer {
   z-index: 1000;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0);
   background: rgb(44, 222, 112);
   background: linear-gradient(
     90deg,
