--- a/public/styles.css
+++ b/public/styles.css
@@ -8,8 +8,18 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(-25deg, #c5c2c2 0%, #96b7c4 100%);
+  background-image: linear-gradient(-25deg, #a1c4fd 0%, #c2e9fb 100%);
   font-family: "Noto Sans", sans-serif;
+}
+h1.heading{
+  text-transform: uppercase;
+  background-color: aliceblue;
+  border: #17a2b8 solid 0.4rem;
+  -webkit-box-shadow: 11px 10px 5px 0px rgba(8,49,120,0.66);
+  -moz-box-shadow: 11px 10px 5px 0px rgba(8,49,120,0.66);
+  box-shadow: 11px 10px 5px 0px rgba(8,49,120,0.66);
+  width: 50%;
+  cursor: default;
 }
 h1,
 p {
